--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,38 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>SPLAT | Купон</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-  </body>
+	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="description" content="Скидка 50% на зубные щетки SPLAT! Сканируй купон на скидку в магазинах «Магнит»" /> 
+		<meta property="og:title" content="SPLAT | Купон" /> 
+		<meta property="og:description" content="Скидка 50% на зубные щетки SPLAT! Сканируй купон на скидку в магазинах «Магнит»" /> 
+		<meta property="og:type" content="website" /> 
+		<meta property="og:site_name" content="SPLAT | Купон" /> 
+		<meta property="og:image" content="https://" />
+		<link rel="icon" href="./favicon.ico" />
+		<title></title>
+		<title>SPLAT | Купон</title>
+	</head>
+	<body>
+		<!-- Yandex.Metrika counter -->
+		<script type="text/javascript" >
+			(function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+			m[i].l=1*new Date();
+			for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
+			k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+			(window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+			ym(90332529, "init", {
+					clickmap:true,
+					trackLinks:true,
+					accurateTrackBounce:true,
+					webvisor:true
+			});
+		</script>
+		<noscript><div><img src="https://mc.yandex.ru/watch/90332529" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+		<!-- /Yandex.Metrika counter -->
+
+		<noscript>You need to enable JavaScript to run this app.</noscript>
+		<div id="root"></div>
+	</body>
 </html>
