Изменено название сайта

--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,14 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="description" content="Скидка 50% на зубные щетки SPLAT! Сканируй купон на скидку в магазинах «Магнит»" /> 
-		<meta property="og:title" content="SPLAT | Купон" /> 
+		<meta property="og:title" content="SPLAT | 50% на щетки в Магнит" /> 
 		<meta property="og:description" content="Скидка 50% на зубные щетки SPLAT! Сканируй купон на скидку в магазинах «Магнит»" /> 
 		<meta property="og:type" content="website" /> 
-		<meta property="og:site_name" content="SPLAT | Купон" /> 
+		<meta property="og:site_name" content="SPLAT | 50% на щетки в Магнит" /> 
 		<meta property="og:image" content="https://" />
 		<link rel="icon" href="./favicon.ico" />
 		<title></title>
-		<title>SPLAT | Купон</title>
+		<title>SPLAT | 50% на щетки в Магнит</title>
 	</head>
 	<body>
 		<!-- Yandex.Metrika counter -->
